--- a/page1/index.html
+++ b/page1/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <!-- LOGO -->
     <header class="header">
-        <img src="logo3.jpg" class="logo" alt="Óculos Store">
+        <img src="/LOGOOCULOS/logo3.jpg" class="logo" alt="Óculos Store">
     </header>
 
     <!-- TÍTULO -->
