--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <!-- LOGO -->
     <header class="header">
-        <img src="/LOGOOCULOS/logo3.jpg" class="logo" alt="Óculos Store">
+        <img src="/LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
     </header>
 
     <!-- TÍTULO -->
@@ -25,16 +25,8 @@
         <h2>Escolha a marca</h2>
         <div class="marcas-grid">
             <div class="marca-card">
-                <h3>Ray-Ban</h3>
+                <h3>Òculos de sol romeo 2 full metal</h3>
                 <button data-marca="RAYBAN">Ver modelos</button>
-            </div>
-            <div class="marca-card">
-                <h3>Oakley</h3>
-                <button data-marca="OAKLEY">Ver modelos</button>
-            </div>
-            <div class="marca-card">
-                <h3>Prada</h3>
-                <button data-marca="PRADA">Ver modelos</button>
             </div>
         </div>
     </section>
