--- a/pagina1/index.html
+++ b/pagina1/index.html
@@ -60,7 +60,7 @@
   <div class="lado-direito">
     <h2>Quem somos?</h2> <!--Subtitulo h2-->
     <p>
-      <i>Uma loja de venda de óculos atua no segmento de acessórios e moda, oferecendo produtos que combinam design, qualidade e estilo.
+      <i>Somos uma loja de venda de óculos atua no segmento de acessórios e moda, oferecendo produtos que combinam design, qualidade e estilo.
         atendendo principalmente jovens e adultos que utilizam os óculos como complemento visual para lazer, eventos e redes sociais.
     </i>    
     </p>
