--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -15,10 +15,14 @@
     </header>
 
     <!-- TÍTULO -->
-    <div class="titulo-bg">
-        <h3>Garanta já o seu oculos</h3>
-    </div>
-    <hr>
+    <div class="container">
+      <div class="titulo-bg"> <!--Div para o fundo do titulo-->
+            <h1>OCULOS DE QUALIDADE</h1> <!--Titulo grande h1-->
+        
+      </div>
+        </div>
+        
+            <hr>
 
     <!-- SEÇÃO MARCAS -->
     <section class="marcas">
