--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <!-- LOGO -->
     <header class="header">
-        <img src="/LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
+        <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
     </header>
 
     <!-- TÍTULO -->
