--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       <!--LOGO MARTINS-->
         <header class="header">
-        <img src="/LOGOOCULOS/logo4.jpg" class="logo" alt="Uniformes Martins">
+        <img src="LOGOOCULOS/logo4.jpg" class="logo" alt="Uniformes Martins">
         </header>
 
 
@@ -35,7 +35,7 @@
 <!--imagem do lado esquerdo da pagina-->
 <section class="secao">
   <div class="lado-esquerdo">
-    <img src="/IMAGENS-PAGE1/imagem1.jpg" alt="Foto">
+    <img src="IMAGENS-PAGE1/imagem1.jpg" alt="Foto">
   </div>
 <!--texto do lado direito da imagem-->
   <div class="lado-direito">
@@ -54,7 +54,7 @@
 <!--imagem do lado esquerdo da pagina-->
 <section class="secao">
   <div class="lado-esquerdo">
-    <img src="/IMAGENS-PAGE1/imagem3.jpg" alt="Foto">
+    <img src="IMAGENS-PAGE1/imagem3.jpg" alt="Foto">
   </div>
 <!--texto do lado direito da imagem-->
   <div class="lado-direito">
@@ -72,7 +72,7 @@
 <!--imagem do lado esquerdo da pagina-->
 <section class="secao">
   <div class="lado-esquerdo">
-    <img src="/IMAGENS-PAGE1/imagem2.jpg" alt="Foto">
+    <img src="IMAGENS-PAGE1/imagem2.jpg" alt="Foto">
   </div>
 <!--texto do lado direito da imagem-->
   <div class="lado-direito">
@@ -101,7 +101,7 @@ e costumam comprar por impulso e influência de redes sociais.
 
 
 <!-- CRIAÇÃO DA MINHA 2 PAGINA HTML -->
-<a href="/Pagina2/index.html" class="botao-pagina">Compre aqui</a>
+<a href="Pagina2/index.html" class="botao-pagina">Compre aqui</a>
 
     </body>
 </html>
