--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -4,7 +4,7 @@
     <title>Compre seus óculos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body class="pagina2">
 
