--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <!-- LOGO -->
     <header class="header">
-        <img src="LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
+        <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
     </header>
 
     <!-- TÍTULO -->
@@ -73,6 +73,10 @@
 <div class="lightbox-overlay" id="lightbox">
     <img src="" alt="Óculos em tela cheia">
 </div>
+
+
+<a href="../index.html">Voltar para página inicial</a>
+
 
 <script src="script.js"></script>
 </body>
