--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -1,83 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Compre seus óculos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <title>Compre seus óculos</title>
+    <!-- CSS da página 2 (mesma pasta) -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="pagina2">
 
-<div class="container">
-    <!-- LOGO -->
-    <header class="header">
-        <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
-    </header>
-
-    <!-- TÍTULO -->
     <div class="container">
-      <div class="titulo-bg"> <!--Div para o fundo do titulo-->
-            <h1>OCULOS DE QUALIDADE</h1> <!--Titulo grande h1-->
-        
-      </div>
-        </div>
-        
-            <hr>
+        <!-- LOGO -->
+        <header class="header">
+            <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
+        </header>
 
-    <!-- SEÇÃO MARCAS -->
-    <section class="marcas">
-        <h2>Escolha a marca</h2>
-        <div class="marcas-grid">
-            <div class="marca-card">
-                <h3>Òculos de sol romeo 2 full metal</h3>
-                <button data-marca="RAYBAN">Ver modelos</button>
+        <!-- TÍTULO -->
+        <div class="container">
+            <div class="titulo-bg">
+                <h1>OCULOS DE QUALIDADE</h1>
             </div>
         </div>
+
+        <hr>
+
+        <!-- SEÇÃO MARCAS -->
+        <section class="marcas">
+            <h2>Escolha a marca</h2>
+            <div class="marcas-grid">
+                <div class="marca-card">
+                    <h3>Óculos de sol Romeo 2 Full Metal</h3>
+                    <button data-marca="RAYBAN">Ver modelos</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- CARRINHO -->
+        <section class="carrinho">
+            <h2>Carrinho</h2>
+            <p>Nenhum item adicionado.</p>
+            <div class="total">
+                <strong>Total:</strong> R$ 0,00
+            </div>
+            <button class="finalizar">Finalizar pedido via WhatsApp</button>
+        </section>
+    </div>
+
+    <!-- PRODUTOS (criado via JS) -->
+    <section class="produtos" style="display:none;">
+        <h2>Modelos disponíveis</h2>
+        <div class="produtos-grid"></div>
+        <button class="botao-voltar" id="fecharProdutos">← Voltar para marcas</button>
     </section>
 
-    <!-- CARRINHO -->
-    <section class="carrinho">
-        <h2>Carrinho</h2>
-        <p>Nenhum item adicionado.</p>
-        <div class="total">
-            <strong>Total:</strong> R$ 0,00
-        </div>
-        <button class="finalizar">Finalizar pedido via WhatsApp</button>
-    </section>
-</div>
-
-<!-- PRODUTOS (criado via JS) -->
-<section class="produtos" style="display:none;">
-    <h2>Modelos disponíveis</h2>
-    <div class="produtos-grid"></div>
-    <button class="botao-voltar" id="fecharProdutos">← Voltar para marcas</button>
-</section>
-
-<!-- MODAL -->
-<div class="modal-overlay" style="display:none;">
-    <div class="modal">
-        <h2>Confirmação de entrega</h2>
-        <input id="nome" placeholder="Nome completo">
-        <input id="whats" placeholder="WhatsApp">
-        <input id="endereco" placeholder="Rua / Avenida">
-        <input id="numero" placeholder="Número da casa">
-        <input id="referencia" placeholder="Ponto de referência">
-        <div>
-            <button id="cancelar">Cancelar</button>
-            <button id="confirmar">Confirmar pedido</button>
+    <!-- MODAL -->
+    <div class="modal-overlay" style="display:none;">
+        <div class="modal">
+            <h2>Confirmação de entrega</h2>
+            <input id="nome" placeholder="Nome completo">
+            <input id="whats" placeholder="WhatsApp">
+            <input id="endereco" placeholder="Rua / Avenida">
+            <input id="numero" placeholder="Número da casa">
+            <input id="referencia" placeholder="Ponto de referência">
+            <div>
+                <button id="cancelar">Cancelar</button>
+                <button id="confirmar">Confirmar pedido</button>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- LIGHTBOX -->
-<div class="lightbox-overlay" id="lightbox">
-    <img src="" alt="Óculos em tela cheia">
-</div>
+    <!-- LIGHTBOX -->
+    <div class="lightbox-overlay" id="lightbox">
+        <img src="" alt="Óculos em tela cheia">
+    </div>
 
+    <a href="../index.html">Voltar para página inicial</a>
 
-<a href="../index.html">Voltar para página inicial</a>
-
-
-<script src="./script.js"></script>
+    <!-- JS da página 2 (mesma pasta) -->
+    <script src="script.js"></script>
 </body>
 </html>
