--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -74,7 +74,8 @@
         <img src="" alt="Óculos em tela cheia">
     </div>
 
-    <a href="../index.html">Voltar para página inicial</a>
+    <a href="../index.html" class="botao-voltar-inicio">Voltar para página inicial</a>
+
 
     <!-- JS da página 2 (mesma pasta) -->
     <script src="script.js"></script>
