--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8"> <!--Define a codificação de caracteres para UTF-8-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Define a viewport para dispositivos móveis-->
-        <title>SITE</title>
+        <title>LUPAS PREMIUM</title>
     <link rel="stylesheet" href="style.css"> <!--Linka o html no meu css-->
     </head>
 
@@ -21,7 +21,7 @@
 
         <div class="container">
       <div class="titulo-bg"> <!--Div para o fundo do titulo-->
-            <h1>OCULOS DE QUALIDADE</h1> <!--Titulo grande h1-->
+            <h1>LUPAS PREMIUM</h1> <!--Titulo grande h1-->
         
       </div>
         </div>
@@ -32,18 +32,18 @@
 
            
 
-<!--imagem do lado esquerdo da pagina-->
 <section class="secao">
-  <div class="lado-esquerdo">
+  <div class="lado-esquerdo objetivo-img">
     <img src="IMAGENS-PAGE1/imagem1.jpg" alt="Foto">
+    <h2 class="objetivo-texto">Nosso objetivo na plataforma</h2>
   </div>
-<!--texto do lado direito da imagem-->
+
   <div class="lado-direito">
-    <h2>Nosso objetivo na plataforma</h2> <!--Subtitulo h2-->
     <p>
-        <i>O objetivo na plataforma é divulgar a marca, engajar o público e impulsionar as vendas,
-             fortalecendo o posicionamento da loja no mercado.
-        </i>   
+      <i>
+        O nosso objetivo na plataforma é divulgar a marca, engajar o público e impulsionar as vendas,
+        fortalecendo o posicionamento da loja no mercado.
+      </i>
     </p>
   </div>
 </section>
@@ -51,42 +51,42 @@
 
 
 
-<!--imagem do lado esquerdo da pagina-->
+
 <section class="secao">
-  <div class="lado-esquerdo">
+  <div class="lado-esquerdo objetivo-img">
     <img src="IMAGENS-PAGE1/imagem3.jpg" alt="Foto">
+    <h2 class="objetivo-texto">Quem somos?</h2>
   </div>
-<!--texto do lado direito da imagem-->
+
   <div class="lado-direito">
-    <h2>Quem somos?</h2> <!--Subtitulo h2-->
     <p>
-      <i>Somos uma loja de venda de óculos atua no segmento de acessórios e moda, oferecendo produtos que combinam design, qualidade e estilo.
-        atendendo principalmente jovens e adultos que utilizam os óculos como complemento visual para lazer, eventos e redes sociais.
-    </i>    
+      <i>
+        Somos uma loja de venda de óculos que atua no segmento de acessórios e moda,
+        oferecendo produtos que combinam design, qualidade e estilo.
+      </i>
     </p>
   </div>
 </section>
 
 
 
-<!--imagem do lado esquerdo da pagina-->
+
 <section class="secao">
-  <div class="lado-esquerdo">
+  <div class="lado-esquerdo objetivo-img">
     <img src="IMAGENS-PAGE1/imagem2.jpg" alt="Foto">
+    <h2 class="objetivo-texto">Segmento de clientes</h2>
   </div>
-<!--texto do lado direito da imagem-->
+
   <div class="lado-direito">
-    <h2>Segmento de clientes</h2> <!--Subtitulo h2-->
     <p>
-    <i>
-jovens e adultos, que usam óculos como acessório de moda,
-para festas, eventos, praia e redes sociais. <br>
-São pessoas que valorizam estilo, tendências, cores e atitude, mais do que correção visual,
-e costumam comprar por impulso e influência de redes sociais.
-    </i>
+      <i>
+        Jovens e adultos que usam óculos como acessório de moda para festas,
+        eventos, praia e redes sociais.
+      </i>
     </p>
   </div>
 </section>
+
 
 
 
