--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8"> <!--Define a codificação de caracteres para UTF-8-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Define a viewport para dispositivos móveis-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <!--Define a viewport para dispositivos móveis-->
         <title>LUPAS PREMIUM</title>
     <link rel="stylesheet" href="style.css"> <!--Linka o html no meu css-->
     </head>
