--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -1,83 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Compre seus óculos</title>
-    <!-- CSS da página 2 (mesma pasta) -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Compre seus óculos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="pagina2">
 
-    <div class="container">
-        <!-- LOGO -->
-        <header class="header">
-            <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
-        </header>
+  <div class="container">
 
-        <!-- TÍTULO -->
-        <div class="container">
-            <div class="titulo-bg">
-                <h1>OCULOS DE QUALIDADE</h1>
-            </div>
-        </div>
+    <header class="header">
+      <img src="../LOGOOCULOS/logo4.jpg" class="logo" alt="Óculos Store">
+    </header>
 
-        <hr>
-
-        <!-- SEÇÃO MARCAS -->
-        <section class="marcas">
-            <h2>Escolha a marca</h2>
-            <div class="marcas-grid">
-                <div class="marca-card">
-                    <h3>Óculos de sol Romeo 2 Full Metal</h3>
-                    <button data-marca="RAYBAN">Ver modelos</button>
-                </div>
-            </div>
-        </section>
-
-        <!-- CARRINHO -->
-        <section class="carrinho">
-            <h2>Carrinho</h2>
-            <p>Nenhum item adicionado.</p>
-            <div class="total">
-                <strong>Total:</strong> R$ 0,00
-            </div>
-            <button class="finalizar">Finalizar pedido via WhatsApp</button>
-        </section>
-    </div>
-
-    <!-- PRODUTOS (criado via JS) -->
-    <section class="produtos" style="display:none;">
-        <h2>Modelos disponíveis</h2>
-        <div class="produtos-grid"></div>
-        <button class="botao-voltar" id="fecharProdutos">← Voltar para marcas</button>
+    <section class="titulo-bg">
+      <h1>LUPAS PREMIUM</h1>
     </section>
 
-    <!-- MODAL -->
-    <div class="modal-overlay" style="display:none;">
-        <div class="modal">
-            <h2>Confirmação de entrega</h2>
-            <input id="nome" placeholder="Nome completo">
-            <input id="whats" placeholder="WhatsApp">
-            <input id="endereco" placeholder="Rua / Avenida">
-            <input id="numero" placeholder="Número da casa">
-            <input id="referencia" placeholder="Ponto de referência">
-            <div>
-                <button id="cancelar">Cancelar</button>
-                <button id="confirmar">Confirmar pedido</button>
-            </div>
+    <section class="marcas">
+      <h2>Escolha a marca</h2>
+
+      <div class="marcas-grid">
+        <div class="marca-card">
+          <h3>Óculos de sol Romeo 2 Full Metal</h3>
+          <button type="button" data-marca="ROMEO">Ver modelos</button>
         </div>
-    </div>
+      </div>
+    </section>
 
-    <!-- LIGHTBOX -->
-    <div class="lightbox-overlay" id="lightbox">
-        <img src="" alt="Óculos em tela cheia">
-    </div>
+    <section class="carrinho">
+      <h2>Carrinho</h2>
 
-    <a href="../index.html" class="botao-voltar-inicio">Voltar para página inicial</a>
+      <div class="itens-carrinho">
+        <p class="carrinho-vazio">Nenhum item adicionado.</p>
+      </div>
 
+      <div class="total">
+        <strong>Total:</strong> R$ <span id="valorTotal">0,00</span>
+      </div>
 
-    <!-- JS da página 2 (mesma pasta) -->
-    <script src="script.js"></script>
+      <button type="button" class="finalizar">
+        Finalizar pedido via WhatsApp
+      </button>
+    </section>
+
+    <section class="produtos" hidden>
+      <h2>Modelos disponíveis</h2>
+      <div class="produtos-grid"></div>
+      <button type="button" class="botao-voltar" id="fecharProdutos">← Voltar</button>
+    </section>
+
+    <a href="../index.html" class="botao-voltar-inicio">
+      Voltar para página inicial
+    </a>
+
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
