--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <footer>
     <hr>
-    <p><i>© 2025 LUPAS PREMIUM. Todos os direitos reservados.</i></p>
+    <p><i>© 2025 Todos os direitos reservados.</i></p>
 </footer>
 
 
