--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Compre seus óculos</title>
+  <title>Compre em nossa loja</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
