--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 <!-- CRIAÇÃO DA MINHA 2 PAGINA HTML -->
-<a href="Pagina2/index.html" class="botao-pagina">Compre aqui</a>
+<a href="pagina2/index.html" class="botao-pagina">Compre aqui</a>
 
     </body>
 </html>
