--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
             <hr>
 
-            <h3><i>Conheça a nossa loja e a nossa plataforma de venda de oculos online.</i></h3>
+            <h3><i>Conheça a nossa loja e a nossa plataforma online de venda de oculos de sol.</i></h3>
 
            
 
