--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="lado-direito">
     <p>
       <i>
-        Jovens e adultos que usam óculos como acessório de moda para festas,
+        São jovens e adultos que usam óculos como acessório de moda para festas,
         eventos, praia e redes sociais.
       </i>
     </p>
