--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 
 <!-- CRIAÇÃO DA MINHA 2 PAGINA HTML -->
+<div class="botao-wrapper">
 <a href="pagina2/index.html" class="botao-pagina">Compre aqui</a>
-
+</div>
     </body>
 </html>
