--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 <!-- CRIAÇÃO DA MINHA 2 PAGINA HTML -->
-<div class="botao-wrapper">
+<div class="botao-container">
 <a href="pagina2/index.html" class="botao-pagina">Compre aqui</a>
 </div>
 
